# agentcoreDataAnalyst

./: .bedrock_agentcore.yaml  .gitignore  .mcp.json  CLAUDE.md  README.md  cdk.json  pyproject.toml
infra/: __init__.py  app.py
infra/stacks/: __init__.py  agentcore_runtime_role_stack.py  code_interpreter_stack.py  storage_stack.py
src/: main.py  system_prompt.md
src/model/: load.py
